# DM2025-Lab2-Exercise

./: .gitignore  DM2025-Lab2-Homework.ipynb  DM2025-Lab2-Master-Phase_1.ipynb  DM2025-Lab2-Master-Phase_2_Bonus.ipynb  DM2025-Lab2-Master-Phase_2_Main.ipynb  DM2025-Lab2-Master.ipynb  DM2025-Lab2-Optional-Ollama.ipynb  README.md  environment_setup.md  pyproject.toml  requirements.txt
GoogleNews/: data_instructions.txt
config/: api_key_instructions.txt
data/: test_df.pkl  test_df_sample_embeddings.pkl  train_df.pkl
logs/: training_log.csv  training_log_2.csv
results/info_extractions/: big_data_vs_dm_extraction.jsonl  big_data_vs_dm_extraction_vis.html  lecture_analysis.json  lecture_extraction_example.jsonl  lecture_extraction_example_vis.html  lecture_for_langextract.txt  new_review_extraction.jsonl  new_review_extraction_vis.html  review_extraction_example.jsonl  review_extraction_example_vis.html  review_extraction_ollama_example.jsonl  review_extraction_ollama_example_vis.html
results/langextract_inputs/: new_lecture_segment.txt
results/llm_classification_results/: results_samples_20_shots_0.csv  results_samples_20_shots_1.csv  results_samples_20_shots_5.csv
