[project]
name = "dm2025-lab2-exercise"
version = "0.1.0"
description = "NTHU ISA5810 Data Mining - Lab 2"
readme = "README.md"
requires-python = "==3.11.0"
dependencies = [
    "beautifulsoup4==4.13.5",
    "chromadb==1.0.20",
    "gensim==4.3.3",
    "google-genai==1.33.0",
    "gradio==5.44.1",
    "jupyter==1.1.1",
    "keras==3.11.3",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core==0.3.75",
    "langchain-google-genai==2.1.10",
    "langextract==1.0.9",
    "matplotlib==3.10.6",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "ollama==0.5.3",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "pymupdf==1.26.4",
    "python-dotenv==1.1.1",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "tensorflow==2.20.0",
    "tensorflow-hub==0.16.1",
    "umap-learn==0.5.9.post2",
]
